2015-06-20  Eli Zaretskii  <eliz@gnu.org>

	* info/pcterm.c (kill): Move prototype from here...
	* system.h: ...to here, conditioned by __MINGW32__.  This solves
	compiler warnings in signals.c.
	* info/pcterm.c	(wcwidth): Make function's signature consistent
	with Gnulib's prototype in gnulib/lib/wchar.h.

	* info/session.c (w32_read): Provide prototype, to avoid compiler
	warnings.

2015-06-18  Eli Zaretskii  <eliz@gnu.org>

	* tp/Texinfo/Common.pm (open_out): Call binmode on opened file 
	handle as intended.

2015-06-18  Karl Berry  <karl@freefriends.org>

	* pretest 5.9.94.
	* configure.ac: version.

2015-06-18  Eli Zaretskii  <eliz@gnu.org>

	Avoid "implicit declaration" warnings in pcterm.c.
	* info/pcterm.c: Include display.h.  Provide prototypes for
	'kill', 'reset_info_window_sizes', and 'redisplay_after_signal'.

2015-06-17  Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Commom.pm (open_out): Add parameter which 
	conditionalizes the calls to "binmode" on file handle.
	* tp/Texinfo/Convert/Info.pm (_open_info_file): New function,
	wrapping Texinfo::Common::open_out.  Call 
	Texinfo::Common::open_out so that it calls "binmode".
	(output): Call _open_info_file instead of open_out directly.

2015-06-16  Karl Berry  <karl@freefriends.org>

	* texindex/tests/ti-helpversion: new test, in new subdir, with
	fingers crossed.
	* texindex/Makefile.am (TESTS): new variable setting.
	(EXTRA_DIST): include $(TESTS).

2015-06-15  Eli Zaretskii  <eliz@gnu.org>, and
            Gavin Smith  <gavinsmith0123@gmail.com>

	* tp/Texinfo/Common.pm (open_out): Run "binmode" on file handle, 
	to disable conversion of LF to CR LF under MS-Windows.

2015-06-14  Karl Berry  <karl@freefriends.org>

	* doc/texinfo.tex (\tcfont, \etcfont): new macros.
	(\ecfont): call \etcfont now, so we can equally support tc* with ec*.
	(\latonechardefs) <a2,a4,a5,a6>,
	(\utfeightchardefs) <00A2,00A4,00A5,00A6>: can now support
	characters cents, currency, yen, broken bar (among others from